css/style.css
* {
    margin: 0;
    box-sizing: border-box;
    font-size: 20px;
}

.select-hand-container,
.game-mode-container {
    margin-top: 30px;
    margin-bottom: 30px;
    margin-left: auto;
    margin-right: auto;
}

.select-hand-container button {
    padding-left: 40px;
    padding-right: 40px;
    margin-right: 30px;
}

.game-mode-container button {
    padding-left: 30px;
    padding-right: 30px;
    margin-right: 30px;
}

.chess-block {
    width: 33.333%;
    height: 33.333%;
    display: inline-block;
    float: left;
    border: 2px solid #000;
}

.game-board {
    width: 40vw;
    height: 40vw;
    margin-left: auto;
    margin-right: auto;
    border: 2px solid #000;
}

.chess-block:nth-child(2n) {
    background-color: 	#A9A9A9;
}

.chess-block:nth-child(2n + 1) {
    background-color: 	#FFF8DC;
}

.block {
    position: relative;
    width: 100%;
    height: 100%;
}

.chess {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 300%;
    font-family: 'Architects Daughter';
}

